package main.java.exceptions;

/**
 * Исключение выбрасывается, когда пользователь оставляет
 * обязательные поля пустыми при добавлении или обновлении товара.
 * <p>
 * Это может касаться следующих значений:
 * <ul>
 *     <li>название товара</li>
 *     <li>бренд</li>
 *     <li>категория</li>
 *     <li>цена (если строка пуста)</li>
 *     <li>количество (если строка пуста)</li>
 * </ul>
 *
 * <p>Используется для информирования пользователя о необходимости
 * корректного заполнения формы.
 */
public class EmptyFieldException extends RuntimeException {

    /**
     * Создаёт новое исключение с указанным сообщением.
     *
     * @param message описание того, какое поле было пустым
     */
    public EmptyFieldException(String message) {
        super(message);
    }
}
