package main.java.exceptions;

/**
 * Исключение выбрасывается при попытке пользователя ввести
 * значение некорректного формата.
 * <p>
 * Обычно возникает в случаях, когда:
 * <ul>
 *     <li>цена введена не как число</li>
 *     <li>количество товара не является целым числом</li>
 *     <li>значение меньше нуля</li>
 * </ul>
 *
 * <p>Позволяет обработать ошибки формата данных и уведомить
 * пользователя о необходимости исправить ввод.
 */
public class InvalidFormatException extends RuntimeException {

    /**
     * Создаёт новое исключение с указанным сообщением.
     *
     * @param message пояснение причины ошибки формата
     */
    public InvalidFormatException(String message) {
        super(message);
    }
}
