package main.java.exceptions;

/**
 * Исключение выбрасывается в тех случаях, когда пользователь
 * вводит отрицательное значение там, где допускаются только
 * положительные числа или ноль.
 * <p>
 * Обычно используется при валидации следующих параметров:
 * <ul>
 *     <li>цена товара (не может быть отрицательной)</li>
 *     <li>количество на складе</li>
 *     <li>количество товара для продажи</li>
 * </ul>
 *
 * <p>Позволяет предотвратить некорректные операции и информирует
 * пользователя о необходимости исправить введённые данные.
 */
public class NegativeValueException extends RuntimeException {

    /**
     * Создаёт новое исключение с указанным сообщением.
     *
     * @param message подробное описание ошибки и причины возникновения
     */
    public NegativeValueException(String message) {
        super(message);
    }
}
