package main.java.exceptions;

/**
 * Исключение выбрасывается в случаях, когда пользователь
 * пытается выполнить операцию, связанную с количеством товара,
 * которое превышает доступное на складе.
 * <p>
 * Например, при продаже товара в количестве, большем,
 * чем текущее значение {@code product.getQuantity()}.
 *
 * <p>Используется для предотвращения некорректных операций
 * и уведомления пользователя о невозможности выполнения действия.
 */
public class QuantityExceededException extends RuntimeException {

    /**
     * Создаёт новое исключение с указанным сообщением.
     *
     * @param message подробное описание причины ошибки
     */
    public QuantityExceededException(String message) {
        super(message);
    }
}
