package main.java.model;

/**
 * Интерфейс, обозначающий, что объект может быть продан.
 * <p>
 * Используется для определения того, что объект имеет цену
 * и может участвовать в операциях продажи.
 */
public interface Sellable {

    /**
     * Возвращает цену объекта.
     *
     * @return цена
     */
    double getPrice();
}
